# visual/matlab/ Makefile for GLUES.

# Copyright (C) 2007,2008,2009
# Carsten Lemmen, GKSS-Forschungszentrum Geesthacht GmbH

## This program is free software; you can redistribute it and/or modify
## it under the terms of the GNU General Public License as published by
## the Free Software Foundation; either version 3, or (at your option)
## any later version.

## This program is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
## GNU General Public License for more details.

## You should have received a copy of the GNU General Public License
## along with this program; if not, write to the Free Software
## Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA
## 02110-1301, USA.

SUBDIRS=lib data doc

EXTRA_DIST=\
calc_event_integral.m \
calc_event_series.m \
calc_map_mesh.m \
calc_regionborders.m \
calc_regioncoasts.m \
calc_regioncolors.m \
calc_regionmap_borders.m \
calc_regionmap_coasts.m \
calc_regionmap_outline.m \
cl_calc_regionpath.m \
calc_replacemany.m \
cl_calc_seas.m \
cprism.m \
create_regions.m\
dislocate_slightly.m \
distribute_around.m \
fep.m \
find_proxy.m \
find_region_numbers.m \
geoidx2geoneighbour.m \
georeference.m \
getchi2.m \
getdof.m \
get_files.m.in \
get_holodata.m \
get_jetnew.m \
get_map_coords.m \
get_regionvector.m \
getz.m \
grep.m \
lae.m \
minls.m \
movavg.m \
name_regionnumber.m \
offMapMarkerClick.m \
onMapMarkerClick.m \
plot_farming_sites.m \
plot_gdd_npp.m \
plot_hist_replacemany.m \
plot_hyper.m \
plot_leavemanyout.m \
plot_map_anomalies.m \
plot_map_band_cluster.m \
plot_map_band_events.m \
plot_map_band_significance.m \
plot_map_events.m \
plot_map_freqchange.m \
plot_map_markers.m \
plot_map_projections.m \
plot_map_proxysites.m \
plot_map_replacemany.m \
plot_map_replacemany_presence.m \
plot_map_solar_marker.m \
plot_migration_sum.m \
plotm_region_numbers.m \
plot_multi_format.m \
plot_multi_variable.m \
plot_origin_regions.m \
plot_proxy_overview.m \
plot_redfit.m \
plot_region_continents.m \
plot_region_numbers.m \
plot_regionnumber_trajectories.m \
plot_regionpath_numbers.m \
plot_region_trajectories.m \
plot_replacemany.m \
plot_seas.m \
plot_settlements.m \
plot_single_redfit.m \
plot_single_replacemany.m \
plot_single_timeseries_anomaly.m \
plot_single_timeseries.m \
plot_threshold.m \
plot_timeseries_anomaly.m \
plot_timeseries_anomaly_publication.m \
plot_timeseries_anomaly_redfit_publication.m \
plot_timeseries_publication.m \
plot_variable.m \
plot_watch_trajectories.m \
print_timeseries_data.m \
qhull_spheric.m \
read_gluesclimate.m\
read_mapping.m \
read_result.m \
read_textcsv.m \
read_txt_comment.m \
regidx2geoidx.m \
regions_event.m \
rhoest.m \
save_coastline.m \
set_paper.m \
showvar.m \
neolithicsites.mat \
regionpath.mat\
rainbow.m \
cl_calc_cluster.m \
cl_def_clustervalue.m \
cl_dump_landcells.m \
cl_dump_result.m \
cl_dump_regionpath.m \
cl_get_iiasa.m \
cl_npp_lieth.m \
cl_read_iiasa.m \
clp_cluster.m \
clp_iiasa.m \
clp_trajectories.m \
plot_variable_deforestation.m \
startup.m \
clp_basemap.m \
clp_marble.m
