# Subsidiary makefile for GLUES 

# Copyright (C) 2007,2008,2009,2010
# Carsten Lemmen, GKSS-Forschungszentrum Geesthacht GmbH

## This program is free software; you can redistribute it and/or modify
## it under the terms of the GNU General Public License as published by
## the Free Software Foundation; either version 3, or (at your option)
## any later version.

## This program is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
## GNU General Public License for more details.

## You should have received a copy of the GNU General Public License
## along with this program; if not, write to the Free Software
## Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA
## 02110-1301, USA.

SUBDIRS = common datastructures development iostreams math memory tree twowaylist

noinst_HEADERS = ./common/CharacterHandler.hh\
./common/ClassObject.hh\
./common/date.hh\
./common/FilenameHandling.hh\
./common/StringHandler.hh\
./cppinc.h\
./datastructures/ArrayParameter.hh\
./datastructures/BooleanParameter.hh\
./datastructures/CharParameter.hh\
./datastructures/CommentParameter.hh\
./datastructures/FloatParameter.hh\
./datastructures/InfoType.hh\
./datastructures/IntParameter.hh\
./datastructures/ListParameter.hh\
./datastructures/Parameter.hh\
./datastructures/ParameterType.hh\
./datastructures/ResultParameter.hh\
./datastructures/String.hh\
./datastructures/StringParameter.hh\
./datastructures/TableParameter.hh\
./development/EmitCxxCode.hh\
./development/LogFile.hh\
./development/MessageHandler.hh\
./development/OutputStream.hh\
./development/ResultElement.hh\
./development/ResultReader.hh\
./development/ResultWriter.hh\
./development/SiSi.hh\
./iostreams/FileParser.hh\
./iostreams/SiSiParser.hh\
./math\
./math/Makefile.am\
./math/Math.hh\
./math/Random.hh\
./math/Round.hh\
./memory/ArrayChecker.hh\
./memory/MemoryHandler.hh\
./platform.hh\
./tree/Node.hh\
./tree/Tree.hh\
./twowaylist/TwoWayList.hh\
./twowaylist/TwoWayListElement.hh\
./twowaylist/TwoWayListFloatElement.hh\
./twowaylist/TwoWayListIntElement.hh\
./twowaylist/TwoWayListStringElement.hh\
./Version.hh

